--- a/comps/sidebar.html
+++ b/comps/sidebar.html
@@ -42,7 +42,7 @@
 </style>
 
 <header>
-  <h2>Months</h2>
+  <h2 class="h2">Months</h2>
   <button @click="$store.book.addEntry()">Add</button>
 </header>
 <ol>
