--- a/comps/month/category.html
+++ b/comps/month/category.html
@@ -1,45 +1,32 @@
-
 <style>
-
-.category {
-  background: var(--gray-9);
-  border: 1px solid var(--gray-8);
-  padding: var(--size-2) var(--size-3);
-  border-radius: var(--radius-2);
-  display: grid;
-  grid-gap: var(--size-3);
-  grid-template-columns: 1fr auto 120px 60px;
-}
-
-.category > h4 {
-  margin: auto 0;
-}
-
-.category > p {
-  padding-left: var(--size-1);
-  margin: auto 0;
-}
-
-.category > .name {
-  width: 100%;
-}
-
-.category > .value {
-  width: 100%;
-}
-
-.category > button {
-  text-align: right;
-}
-
-
+  #month .category > div {
+    background: var(--gray-9);
+    border: 1px solid var(--gray-8);
+    padding: var(--size-2) var(--size-3);
+    border-radius: var(--radius-2);
+    display: grid;
+    grid-gap: var(--size-3);
+    grid-template-columns: 1fr auto 120px 60px;
+    h4 {
+      margin: auto 0;
+    }
+    p {
+      padding-left: var(--size-1);
+      margin: auto 0;
+    }
+    .name {
+      width: 100%;
+    }
+    .value {
+      width: 100%;
+    }
+    button {
+      text-align: right;
+    }
+  }
 </style>
 
-
-<div
-  class="category"
-  x-data="{editN: false, editV: false, n: '', v: 0}"
->
+<div x-data="{editN: false, editV: false, n: '', v: 0}">
   <h4 class="data" x-show="!editN" x-text="category.name"></h4>
   <button x-show="!editN" @click="editN = true">Rename</button>
   <input
