--- a/comps/settings/index.html
+++ b/comps/settings/index.html
@@ -1,37 +1,67 @@
-<h2>Categories</h2>
+<style>
+  #settings {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: var(--size-4);
+    div {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-gap: var(--size-2);
+    }
+    #file {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      grid-gap: var(--size-2) var(--size-1);
+      form {
+        margin: auto 0;
+        display: inline;
+        label > input[type="file"] {
+          display: none;
+        }
+      }
+    }
+  }
+</style>
 
-<h3>Income</h3>
-<section>
-  <template x-for="category in $store.categories.inflow" :key="category.id">
-    <p class="data" x-text="category.name"></p>
-    <button>Edit</button>
-  </template>
-</section>
+<div>
+  <h2 class="h2">Categories</h2>
+  <h3 class="h3">Income</h3>
+  <section>
+    <template x-for="category in $store.categories.inflow" :key="category.id">
+      <div
+        hx-get="/comps/settings/category.html"
+        hx-trigger="load"
+        x-init="$nextTick(() => {htmx.process($el)})"
+        class="category"
+      ></div>
+    </template>
+  </section>
+  <h3 class="h3">Expenses</h3>
+  <section>
+    <template x-for="category in $store.categories.outflow" :key="category.id">
+      <p class="data" x-text="category.name"></p>
+      <button>Edit</button>
+    </template>
+  </section>
+</div>
 
-<h3>Expenses</h3>
-<section>
-  <template x-for="category in $store.categories.outflow" :key="category.id">
-    <p class="data" x-text="category.name"></p>
-    <button>Edit</button>
-    <button>foo</button>
-  </template>
-</section>
-
-<h2>File</h2>
-<section id="file">
-  <p>Open an existing file</p>
-  <form @submit.prevent="$store.app.submitData()">
-    <label class="button">
-      <input
-        x-on:change="$store.book.load($event)"
-        type="file"
-        name="book"
-        accept=".json"
-        required
-      />
-      Open
-    </label>
-  </form>
-  <p>Save to file</p>
-  <button>Save</button>
-</section>
+<div>
+  <h2 class="h2">File</h2>
+  <section id="file">
+    <p>Open an existing file</p>
+    <form @submit.prevent="$store.app.submitData()">
+      <label class="button">
+        <input
+          x-on:change="$store.book.load($event)"
+          type="file"
+          name="book"
+          accept=".json"
+          required
+        />
+        Open
+      </label>
+    </form>
+    <p>Save to file</p>
+    <button>Save</button>
+  </section>
+</div>
