--- a/index.html
+++ b/index.html
@@ -3,39 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="icons" href="/icon/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" href="/style.css" />
-
     <script defer src="/main.js"></script>
     <script defer src="/deps/js/alpine.js"></script>
     <script defer src="/deps/js/htmx.js"></script>
-
     <title>Buchhaltung</title>
+    <style>
+      html {
+        height: 100%;
+        body {
+          height: 100%;
+          display: grid;
+          grid-template-rows: auto 1fr;
+          grid-template-columns: auto 1fr;
+          background: var(--gray-11);
+          header {
+            grid-column: 1/3;
+          }
+          main {
+            height: 100%;
+            background: var(--gray-10);
+            border: 1px solid var(--gray-8);
+            border-top-left-radius: var(--radius-3);
+            padding: var(--size-4);
+          }
+        }
+      }
+    </style>
   </head>
   <body>
     <header id="header" hx-get="/comps/header.html" hx-trigger="load"></header>
     <aside id="sidebar" hx-get="/comps/sidebar.html" hx-trigger="load"></aside>
-    <main
-      id="month"
-      class="view"
-      hx-get="/comps/month/index.html"
-      hx-trigger="load"
-      x-show="$store.view === 'month'"
-    ></main>
-    <main
-      id="settings"
-      class="view"
-      hx-get="/comps/settings/index.html"
-      hx-trigger="load"
-      x-show="$store.view === 'settings'"
-    ></main>
+    <main>
+      <article
+        id="month"
+        class="view"
+        hx-get="/comps/month/index.html"
+        hx-trigger="load"
+        x-show="$store.view === 'month'"
+      ></article>
+      <article
+        id="settings"
+        class="view"
+        hx-get="/comps/settings/index.html"
+        hx-trigger="load"
+        x-show="$store.view === 'settings'"
+      ></article>
+    </main>
     <script>
       document.addEventListener("alpine:init", () => {
         Alpine.store("name", "Finances");
-        Alpine.store("view", "settings");
+        Alpine.store("view", "month");
         Alpine.store("categories", categories);
         Alpine.store("book", entries);
       });
