--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           grid-template-rows: auto 1fr;
           grid-template-columns: auto 1fr;
           background: var(--gray-11);
-          header {
+          #header {
             grid-column: 1/3;
           }
           main {
