--- a/comps/month/index.html
+++ b/comps/month/index.html
@@ -7,7 +7,6 @@
       display: grid;
       grid-template-columns: 120px 80px 1fr auto;
       grid-gap: var(--size-1);
-
       h2 {
         font-size: var(--font-size-2);
         grid-column: 1/3;
@@ -15,12 +14,6 @@
       button {
         grid-column: 4;
       }
-    }
-    #inflow {
-      grid-row: 2;
-    }
-    #outflow {
-      grid-row: 3;
     }
     section {
       display: grid;
@@ -38,24 +31,24 @@
   <h2
     x-show="!edit"
     class="data"
-    x-text="dateToString($store.book.index.date)"
+    x-text="dateToString($store.entries.index.date)"
   ></h2>
   <button x-show="!edit" @click="edit=true">Edit</button>
   <input
     x-show="edit"
     type="text"
     x-ref="month"
-    x-bind:value="monthToString($store.book.index.date.month)"
+    x-bind:value="monthToString($store.entries.index.date.month)"
   />
   <input
     x-show="edit"
     type="number"
     x-ref="year"
-    x-bind:value="$store.book.index.date.year"
+    x-bind:value="$store.entries.index.date.year"
   />
   <button
     x-show="edit"
-    @click="$store.book.setDate($store.book.index.id, getDate($refs.year.value, stringToMonth($refs.month.value))), edit=false;"
+    @click="$store.entries.setDate($store.entries.index.id, getDate($refs.year.value, stringToMonth($refs.month.value))), edit=false;"
   >
     Save
   </button>
@@ -72,7 +65,7 @@
     ></div>
   </template>
   <div
-    class="addCategory"
+    class="add card"
     hx-get="/comps/month/add.html"
     hx-trigger="load"
     x-data="{category: '', value: 0}"
@@ -90,7 +83,7 @@
     ></div>
   </template>
   <div
-    class="addCategory"
+    class="add card"
     hx-get="/comps/month/add.html"
     hx-trigger="load"
     x-data="{category: '', value: 0}"
