--- a/comps/settings/index.html
+++ b/comps/settings/index.html
@@ -2,16 +2,22 @@
   #settings {
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: var(--size-4);
-    div {
+    grid-gap: var(--size-5);
+    section {
       display: grid;
+      grid-gap: var(--size-2) var(--size-1);
+    }
+    #category {
       grid-template-columns: 1fr;
-      grid-gap: var(--size-2);
+      h3 {
+        padding-top: var(--size-2);
+      }
     }
     #file {
-      display: grid;
       grid-template-columns: 1fr auto;
-      grid-gap: var(--size-2) var(--size-1);
+      h2 {
+        grid-column: 1/3;
+      }
       form {
         margin: auto 0;
         display: inline;
@@ -23,45 +29,45 @@
   }
 </style>
 
-<div>
+<section id="category">
   <h2 class="h2">Categories</h2>
   <h3 class="h3">Income</h3>
-  <section>
-    <template x-for="category in $store.categories.inflow" :key="category.id">
-      <div
-        hx-get="/comps/settings/category.html"
-        hx-trigger="load"
-        x-init="$nextTick(() => {htmx.process($el)})"
-        class="category"
-      ></div>
-    </template>
-  </section>
+  <template x-for="category in $store.categories.inflow" :key="category.id">
+    <div
+      hx-get="/comps/settings/category.html"
+      hx-trigger="load"
+      x-init="$nextTick(() => {htmx.process($el)})"
+      x-data="{flow: 'inflow'}"
+      class="category"
+    ></div>
+  </template>
   <h3 class="h3">Expenses</h3>
-  <section>
-    <template x-for="category in $store.categories.outflow" :key="category.id">
-      <p class="data" x-text="category.name"></p>
-      <button>Edit</button>
-    </template>
-  </section>
-</div>
+  <template x-for="category in $store.categories.outflow" :key="category.id">
+    <div
+      hx-get="/comps/settings/category.html"
+      hx-trigger="load"
+      x-init="$nextTick(() => {htmx.process($el)})"
+      x-data="{flow: 'outflow'}"
+      class="category"
+    ></div>
+  </template>
+</section>
 
-<div>
+<section id="file">
   <h2 class="h2">File</h2>
-  <section id="file">
-    <p>Open an existing file</p>
-    <form @submit.prevent="$store.app.submitData()">
-      <label class="button">
-        <input
-          x-on:change="$store.book.load($event)"
-          type="file"
-          name="book"
-          accept=".json"
-          required
-        />
-        Open
-      </label>
-    </form>
-    <p>Save to file</p>
-    <button>Save</button>
-  </section>
-</div>
+  <p>Open an existing file</p>
+  <form @submit.prevent="$store.app.submitData()">
+    <label class="button">
+      <input
+        x-on:change="$store.book.load($event)"
+        type="file"
+        name="book"
+        accept=".json"
+        required
+      />
+      Open
+    </label>
+  </form>
+  <p>Save to file</p>
+  <button>Save</button>
+</section>
