--- a/comps/sidebar.html
+++ b/comps/sidebar.html
@@ -1,15 +1,14 @@
 <style>
   #sidebar {
-    min-width: 200px;
+    min-width: 220px;
     padding: var(--size-4);
     padding-left: var(--size-2);
-    padding-right: var(--size-2);
+    padding-right: var(--size-3);
     header {
       display: inline;
       display: grid;
       grid-template-columns: 1fr auto;
-      padding-left: var(--size-2);
-      padding-right: var(--size-3);
+      padding: 0 var(--size-2);
       button {
         margin-top: auto;
       }
@@ -19,23 +18,24 @@
       list-style-type: none;
       li {
         margin: var(--size-2) 0;
-        padding: var(--size-2);
-        border-radius: var(--radius-2);
-        color: var(--sand-1);
-        border: 1px solid transparent;
-        h3 {
-          white-space: nowrap;
+        display: grid;
+        grid-template-rows: auto auto;
+        grid-template-columns: 1fr auto;
+        grid-gap: 0 var(--size-2);
+        small {
+          grid-row: 2;
         }
       }
       li:hover {
         cursor: pointer;
+      }
+      li:not(.selected) {
+        border: 1px solid transparent;
+        background: transparent;
+      }
+      li:not(.selected):hover {
         background: var(--gray-10);
         border: 1px solid var(--gray-8);
-      }
-      li.selected, li.selected:hover {
-        background: var(--gray-9);
-        border: 1px solid var(--gray-8);
-        box-shadow: 0 0 var(--size-3) var(--size-2) var(--gray-10);
       }
     }
   }
@@ -43,24 +43,30 @@
 
 <header>
   <h2 class="h2">Months</h2>
-  <button @click="$store.book.addEntry()">Add</button>
+  <button @click="$store.entries.add()">Add</button>
 </header>
 <ol>
   <template
     x-data="{options: getOptions(), now: getNow()}"
-    x-for="entry in $store.book.sortedEntries()"
+    x-for="entry in $store.entries.sortedEntries()"
     :key="entry.id"
   >
     <li
-      x-bind:class="($store.view == 'month') && (entry.id == $store.book.index.id) ? 'selected' : ''"
-      @click="$store.book.setIndex(entry.id), $store.view = 'month';"
-      x-data="{inflow: entry.sum('inflow'), outflow: entry.sum('outflow')}"
+      x-bind:class="($store.view == 'month') && (entry.id == $store.entries.index.id) ? 'card selected' : 'card'"
+      @click="$store.entries.setIndex(entry.id), $store.view = 'month';"
     >
       <h3 class="data" x-text="dateToString(entry.date)"></h3>
+      <button
+        class="delete"
+        x-show="entry.sums['inflow'] === 0 && entry.sums['outflow'] === 0"
+        @click="$store.entries.del(entry.id)"
+      >
+        X
+      </button>
       <small
-        x-data="{balance: inflow - outflow}"
-        x-bind:class="balance > 0 ? 'positive data' : balance < 0 ? 'negative data' : 'data'"
-        x-text="`${amountToString(balance, {signed: true})}`"
+        x-show="entry.sums['inflow'] !== 0 | entry.sums['outflow'] !== 0"
+        x-bind:class="entry.balance > 0 ? 'positive data' : entry.balance < 0 ? 'negative data' : 'data'"
+        x-text="`${amountToString(entry.balance, {signed: true})}`"
       >
       </small>
     </li>
